force-app/main/default/objects/Concierge_Live_Log__c/Concierge_Live_Log__c.object-meta.xml
<CustomObject>
    <description>Logging object to maintain most recent stored exceptions.</description>
    <label>Concierge Live Log</label>
    <nameField>
        <label>Concierge Live Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Concierge Live Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>