force-app/main/default/objects/Concierge_Live_Log__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Name of the Class, if available</description>
    <inlineHelpText>Name of the Class, if available</inlineHelpText>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>