force-app/main/default/objects/Concierge_Live_Log__c/fields/Delete_Required__c.field-meta.xml
<CustomField>
    <fullName>Delete_Required__c</fullName>
    <description>If checked, indicates record is available for cleanup (removal) due to age.</description>
    <formula>IF ( (TODAY() - DATEVALUE(CreatedDate)) &gt; 7, true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked, indicates record is available for cleanup (removal) due to age.</inlineHelpText>
    <label>Delete Required</label>
    <type>Checkbox</type>
</CustomField>