force-app/main/default/objects/Concierge_Live_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Name of the Method, if available</description>
    <inlineHelpText>Name of the Method, if available</inlineHelpText>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>